Allowing content wrapper containers to be reference point for absolute positioning of child elements. Padding must therefore be avoided because the absolute position value (e.g. "right: 0") would not be possible to achieve an accurate alignment of the absolutely positioned element.

--- a/scss/ls/_general-mixins.scss
+++ b/scss/ls/_general-mixins.scss
@@ -1,71 +1,31 @@
 @mixin ls_contentWrapper() {
-  max-width: 190rem;
+  width: 190rem;
+  max-width: 90vw;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 12rem;
-  padding-right: 12rem;
-
-  @media only screen and(max-width: 1099px) {
-    padding-left: 4.5rem;
-    padding-right: 4.5rem;
-  }
-
-  @media screen and(max-width: 499px) {
-    padding-left: 1rem;
-    padding-right: 1.5rem;
-  }
+  position: relative;
 }
 
 @mixin ls_mediumContentWrapper() {
-  max-width: 120rem;
+  width: 120rem;
+  max-width: 90vw;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 10rem;
-  padding-right: 10rem;
-
-  @media only screen and(max-width: 1099px) {
-    padding-left: 4.5rem;
-    padding-right: 4.5rem;
-  }
-
-  @media screen and(max-width: 499px) {
-    padding-left: 1rem;
-    padding-right: 1.5rem;
-  }
+  position: relative;
 }
 
 @mixin ls_narrowContentWrapper() {
-  max-width: 90rem;
+  width: 90rem;
+  max-width: 90vw;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 10rem;
-  padding-right: 10rem;
-
-  @media only screen and(max-width: 1099px) {
-    padding-left: 4.5rem;
-    padding-right: 4.5rem;
-  }
-
-  @media screen and(max-width: 499px) {
-    padding-left: 1rem;
-    padding-right: 1.5rem;
-  }
+  position: relative;
 }
 
 @mixin ls_superNarrowContentWrapper() {
-  max-width: 60rem;
+  width: 60rem;
+  max-width: 90vw;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 6rem;
-  padding-right: 6rem;
-
-  @media only screen and(max-width: 1099px) {
-    padding-left: 4.5rem;
-    padding-right: 4.5rem;
-  }
-
-  @media screen and(max-width: 499px) {
-    padding-left: 1rem;
-    padding-right: 1.5rem;
-  }
+  position: relative;
 }
